<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".application.ui.pay.PayActivity">

    <ImageView
        android:id="@+id/pay_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/pay_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/pay_img"
        app:layout_constraintStart_toEndOf="@id/pay_img"
        tools:text="@string/app_name" />

    <Button
        android:id="@+id/pay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_button"
        app:layout_constraintBottom_toTopOf="@id/pay_iris_btn" />

    <Button
        android:id="@+id/pay_iris_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/pay_iris_button"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/pay_loader"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/pay_btn"
        app:layout_constraintEnd_toEndOf="@id/pay_btn"
        app:layout_constraintStart_toStartOf="@id/pay_btn"
        app:layout_constraintTop_toTopOf="@id/pay_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>